# hybrid-quantum

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTORS.txt  LICENSE.txt  README.md  build.sh  justfile  new.ll  pyrightconfig.json  requirements.txt  ruff.toml  run.sh  test.ll  test.sh
.github/workflows/: clang-format-check.yml
cinnamon/: justfile
cinnamon/examples/: opaque.ll  opaque.mlir
cinnamon/lib/Conversion/: CMakeLists.txt
cinnamon/lib/Dialect/: CMakeLists.txt
cinnamon/runtime/: CMakeLists.txt
cinnamon/tools/: CMakeLists.txt
cinnamon/tools/cinm-opt/: cinm-opt.cpp
cinnamon/tools/cinm-translate/: cinm-translate.cpp
cinnamon/tools/quantum-opt/: CMakeLists.txt
docs/: CMakeLists.txt  cppreference-doxygen-web.tag.xml  doxygen-mainpage.dox  doxygen.cfg.in
examples/: all_operations.mlir
examples/q#/: shor.qs  test.qs
examples/qir/: README.md  bell_for.mlir  bell_states.mlir  simple_vqe.mlir  superposition.mlir  teleportation.mlir
examples/quantum/: README.md  bell_pairs.mlir  deutsch.mlir  grover.mlir  quantum_machine_learning.mlir  teleportation.mlir
frontend/: requirements.txt
frontend/qasm/: CMakeLists.txt  QASM2MLIR.py  ifelse.qasm  input.qasm  qasm-import.py  requirements.txt
include/: CMakeLists.txt
include/quantum-mlir/: CMakeLists.txt
include/quantum-mlir-c/Dialect/: QILLR.h  QIR.h  RVSDG.h
include/quantum-mlir/Conversion/: Passes.h  Passes.td
include/quantum-mlir/Dialect/: CMakeLists.txt
include/quantum-mlir/Dialect/QILLR/: CMakeLists.txt
include/quantum-mlir/Dialect/QILLR/IR/: CMakeLists.txt  QILLR.h  QILLRAttributes.h  QILLRAttributes.td  QILLRBase.h  QILLRBase.td  QILLROps.h  QILLROps.td  QILLRTypes.h  QILLRTypes.td
include/quantum-mlir/Dialect/QILLR/Transforms/: CMakeLists.txt  Passes.h  Passes.td
include/quantum-mlir/Dialect/QIR/: CMakeLists.txt
include/quantum-mlir/Dialect/QIR/IR/: QIRAttributes.h  QIRAttributes.td  QIRBase.h  QIRDeviceOps.td  QIROps.h  QIROps.td  QIRTypes.td
include/quantum-mlir/Dialect/QIR/Transforms/: CMakeLists.txt  Passes.h  Passes.td
include/quantum-mlir/Dialect/QPU/: CMakeLists.txt
include/quantum-mlir/Dialect/QPU/Analysis/: SabreSwapAnalysis.h
include/quantum-mlir/Dialect/QPU/IR/: CMakeLists.txt  QPU.h  QPUAttributes.h  QPUAttributes.td  QPUBase.h  QPUBase.td  QPUOps.h  QPUOps.td  QPUTypes.h  QPUTypes.td
include/quantum-mlir/Dialect/QPU/Transforms/: CMakeLists.txt  Passes.h  Passes.td
include/quantum-mlir/Dialect/RVSDG/: CMakeLists.txt  LICENSE_RVSDG_original.txt
include/quantum-mlir/Dialect/RVSDG/IR/: CMakeLists.txt  RVSDG.h  RVSDGAttributes.h  RVSDGAttributes.td  RVSDGBase.h  RVSDGBase.td  RVSDGOps.h  RVSDGOps.td  RVSDGTypes.h  RVSDGTypes.td
lib/Bindings/Python/: DialectQILLR.cpp  DialectQIR.cpp  DialectRVSDG.cpp
lib/CAPI/: CMakeLists.txt
lib/CAPI/Dialect/: CMakeLists.txt  QIR.cpp
lib/CAPI/Dialect/QILLR/: CMakeLists.txt  QILLR.cpp
lib/CAPI/Dialect/RVSDG/: CMakeLists.txt  RVSDG.cpp
lib/Conversion/: CMakeLists.txt
lib/Conversion/QILLRToLLVM/: CMakeLists.txt  QILLRToLLVM.cpp
lib/Conversion/QILLRToQuantum/: CMakeLists.txt  QILLRToQuantum.cpp
lib/Conversion/QIRToLLVM/: CMakeLists.txt  QIRToLLVM.cpp
lib/Conversion/QIRToQuantum/: CMakeLists.txt  QIRToQuantum.cpp
lib/Conversion/QuantumToQILLR/: CMakeLists.txt  QuantumToQILLR.cpp
lib/Conversion/QuantumToQIR/: CMakeLists.txt  QuantumToQIR.cpp
lib/Conversion/ScfToRVSDG/: CMakeLists.txt  ScfToRVSDG.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/QILLR/IR/: CMakeLists.txt  (+4 more)
lib/Dialect/Quantum/: CMakeLists.txt  QuantumEnums.cpp
lib/Dialect/RVSDG/: CMakeLists.txt
python/: CMakeLists.txt
python/mlir/dialects/: QILLROps.td  QIROps.td  RVSDGOps.td  qillr.py  qir.py  rvsdg.py
quantum/: CMakeLists.txt
quantum/cmake/: MLIRUtils.cmake
quantum/examples/: hamid.mlir  opaque2.mlir  quantum_machine_learning.mlir  simple_circuit.ll  simple_circuit.mlir  simple_circuit_llvm.mlir  superposition.mlir  target.ll
quantum/examples/Lowering/: opaque.ll  phase_estimation.qs  simple.qs  simple_circuit.qs  test.ll  test.qs
quantum/examples/q#/: state_preparation.qs  vqe.qs
quantum/examples/qir/: bell.mlir  bell_for.mlir  bell_states.mlir  memref.mlir  simple_vqe.mlir  superposition.mlir
quantum/include/cinm-mlir/: CMakeLists.txt
quantum/include/cinm-mlir/Dialect/QIR/: CMakeLists.txt
quantum/include/cinm-mlir/Dialect/QIR/IR/: CMakeLists.txt  QIR.h  QIRBase.h  QIRBase.td  QIRDialect.h  QIROps.h  QIROps.td  QIRTypes.h  QIRTypes.td
quantum/include/cinm-mlir/Dialect/QIR/Transforms/: CMakeLists.txt  Passes.h  Passes.td
quantum/include/cinm-mlir/Dialect/Quantum/: CMakeLists.txt  QuantumEnums.h  QuantumEnums.td
quantum/include/cinm-mlir/Dialect/Quantum/IR/: CMakeLists.txt  Quantum.h  QuantumAttributes.h  QuantumAttributes.td  QuantumBase.h  QuantumBase.td  QuantumOps.h  QuantumOps.td  QuantumTypes.h  QuantumTypes.td
quantum/include/cinm-mlir/Dialect/Quantum/Transforms/: CMakeLists.txt  Passes.h  Passes.td  QuantumPasses.h
quantum/lib/Conversion/: CMakeLists.txt  PassDetails.h
quantum/lib/Dialect/: CMakeLists.txt
quantum/test/: CMakeLists.txt  lit.site.cfg.py.in
quantum/test/Integration/: test.mlir
quantum/tools/: CMakeLists.txt
quantum/tools/cinm-opt/: cinm-opt.cpp
quantum/tools/quantum-lsp-server/: quantum-lsp-server.cpp
quantum/tools/quantum-opt/: CMakeLists.txt  quantum-opt.cpp
quantum/tools/quantum-translate/: CMakeLists.txt  quantum-translate.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Conversion/QASMtoMLIR/: ifelse-to-mlir.mlir  qasm-to-mlir.mlir
test/Conversion/QILLRToLLVM/: qillr-to-llvmir.mlir
test/Conversion/QILLRToQuantum/: qillr-to-quantum.mlir
test/Conversion/QIRToQuantum/: qir-to-quantum.mlir
test/Conversion/QirToLLVM/: qir-to-llvmir.mlir
test/Integration/: dnn.mlir  qir-integration-test.mlir
test/quantum-opt/: quantum-opt.mlir
tools/quantum-lsp-server/: CMakeLists.txt  quantum-lsp-server.cpp
tools/quantum-opt/: quantum-opt.cpp
tools/quantum-translate/: quantum-translate.cpp
unittest/: CMakeLists.txt  QuantumIf.cpp  main.cpp
(+179 files in other folders)
